@@ -4,10 +4,7 @@ import com.example.helloworld.core.User;
 import io.dropwizard.auth.AuthenticationException;
 import io.dropwizard.auth.Authenticator;
 import io.dropwizard.auth.basic.BasicCredentials;
-import io.dropwizard.util.Maps;
-import io.dropwizard.util.Sets;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -16,11 +13,11 @@ public class ExampleAuthenticator implements Authenticator<BasicCredentials, Use
     /**
      * Valid users with mapping user -> roles
      */
-    private static final Map<String, Set<String>> VALID_USERS = Collections.unmodifiableMap(Maps.of(
-        "guest", Collections.emptySet(),
-        "good-guy", Collections.singleton("BASIC_GUY"),
-        "chief-wizard", Sets.of("ADMIN", "BASIC_GUY")
-    ));
+    private static final Map<String, Set<String>> VALID_USERS = Map.of(
+        "guest", Set.of(),
+        "good-guy", Set.of("BASIC_GUY"),
+        "chief-wizard", Set.of("ADMIN", "BASIC_GUY")
+    );
 
     @Override
     public Optional<User> authenticate(BasicCredentials credentials) throws AuthenticationException {
