@@ -1,6 +1,5 @@
 package io.dropwizard.migrations;
 
-import io.dropwizard.util.Maps;
 import liquibase.change.CheckSum;
 import net.jcip.annotations.NotThreadSafe;
 import net.sourceforge.argparse4j.inf.Namespace;
@@ -9,7 +8,8 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayOutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -28,9 +28,9 @@ class DbCalculateChecksumCommandTest extends AbstractMigrationTest {
             assertThat(checkSum).isEqualTo(CheckSum.parse("8:0f3683b37321ccfb1694a044986de4d9"));
             checkSumVerified.set(true);
         });
-        migrateCommand.run(null, new Namespace(Maps.of(
-                "id", Collections.singletonList("2"),
-                "author", Collections.singletonList("db_dev"))),
+        migrateCommand.run(null, new Namespace(Map.of(
+                "id", List.of("2"),
+                "author", List.of("db_dev"))),
                 createConfiguration(getDatabaseUrl()));
         assertThat(checkSumVerified).isTrue();
     }
